--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -4046,6 +4046,14 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level2 subcell">The “–” button doesn't work reliably (the item gets reinserted at the top of the list).<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
+<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
 <img onmousedown="ioSwitch('pimT3VdoxENp', event.shiftKey)" id="iimT3VdoxENp" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
 <td class=" content level2 subcell">Persist notifier position (partially implemented)<br>
@@ -5755,7 +5763,7 @@
 <td class=" subcell wholedocgutter indicator level1 levelguttercolor1" style="width: 28px;">
 <img onmousedown="ioSwitch('pjAOT-TLS_lI', event.shiftKey)" id="ijAOT-TLS_lI" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
-<td class=" content level1 subcell">1.2 (10.10+) — address deprecations<br>
+<td class=" content level1 subcell">1.2 (10.11+?) — address deprecations<br>
 </td>
 </tr></table></div></td></tr></table>
 <div id="pjAOT-TLS_lI" class="collapsed">
