Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -4216,13 +4216,21 @@
 <td class=" content level3 subcell">Test repetition<br>
 </td>
 </tr></table></div></td></tr></table>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack">
-<tr><td class=" col1 colbackground1 col_width1" style="border-bottom: none;"><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level3 subcell">Filter with AVURLAsset.audiovisualTypes, or you get lots of logging on 10.10<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack">
+<tr><td class=" col1 colbackground1 col_width1" style="border-bottom: none;"><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level3 subcell">More errors when closing the on 10.10<br>
 </td>
 </tr></table></div></td></tr>
 <tr><td class=" level3 colbackground1"><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="width:100%"><tr>
@@ -4230,7 +4238,7 @@
 <td class=" subcell wholedocgutter levelguttercolor3" style="width: 28px;"></td>
 <td class=" subcell" style="width: 16px;"></td>
 <td class="note subcell"><div style="text-align: left;  ">
-<span class="" style='color:rgb(0,0,0) ;  font-family: "Menlo", sans-serif;  font-style: italic;font-style: normal;font-weight: 900;  text-align: left;  '>[09:44:54.920] &lt;&lt;&lt; FFR_Common &gt;&gt;&gt; FigFormatReaderCreateForStreamReturningMatchingContainerLabelType: *** Could not find format reader for URL "</span><span class="" style='color:rgb(0,0,0) ;  font-family: "Menlo", sans-serif;  font-style: italic;font-style: normal;font-weight: 900;  text-align: left;  '> <span><a href="file:///Users/nicholas/Library/Sounds/.DS_Store">.DS_Store</a></span></span><span class="" style='color:rgb(0,0,0) ;  font-family: "Menlo", sans-serif;  font-style: italic;font-style: normal;font-weight: 900;  text-align: left;  '>" path "/Users/nicholas/Library/Sounds/.DS_Store" extension "DS_Store" FileType '' MIMETYPE "(null)" SuggFileName "(null)" SuggNameExtension "(null)"</span><br>
+<span class="" style='color:rgb(0,0,0) ;  font-family: "Menlo", sans-serif;  font-style: italic;font-style: normal;font-weight: 900;  text-align: left;  '>[10:00:07.596] itemasync_CopyProperty signalled err=-12785 (kFigBaseObjectError_Invalidated) (invalidated) at /SourceCache/CoreMedia/CoreMedia-1562.240/Prototypes/Player/FigPlayer_Async.c line 2088</span><br>
 </div></td>
 </tr></table></div></td></tr>
 </table>
