--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -4267,32 +4267,6 @@
 <td class=" content level2 subcell">Fix up Read Me<br>
 </td>
 </tr></table></div></td></tr></table>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack">
-<tr><td class=" col1 colbackground1 col_width1" style="border-bottom: none;"><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
-<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img onmousedown="ioSwitch('pgfesp4ACuOT', event.shiftKey)" id="igfesp4ACuOT" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level2 subcell">Test and potentially downgrade Sparkle — it isn't working<br>
-</td>
-</tr></table></div></td></tr>
-<tr><td class=" level2 colbackground1"><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="width:100%"><tr>
-<td style="width: 25px;" class=" subcell wholedocgutter levelguttercolor2"></td>
-<td class=" subcell wholedocgutter levelguttercolor2" style="width: 28px;"></td>
-<td class=" subcell" style="width: 16px;"></td>
-<td class="note subcell"><div style="text-align: left;  ">
-<span class="" style='color:rgb(0,0,0) ;  font-family: "Menlo", sans-serif;  font-style: italic;font-style: normal;font-weight: 900;  text-align: left;  '>NSURLSession/NSURLConnection HTTP load failed (kCFStreamErrorDomainSSL, -9806)</span><br>
-</div></td>
-</tr></table></div></td></tr>
-</table>
-<div id="pgfesp4ACuOT" class="expanded"><table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
-<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level3 subcell">Only happening on my MBP? Huh?<br>
-</td>
-</tr></table></div></td></tr></table></div>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
@@ -4329,12 +4303,12 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor1"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level1 levelguttercolor1" style="width: 9px;"></td>
 <td class=" subcell wholedocgutter indicator level1 levelguttercolor1" style="width: 28px;">
-<img onmousedown="ioSwitch('pgotAfbOXCFU', event.shiftKey)" id="igotAfbOXCFU" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="-" src="Mixed.png">
+<img onmousedown="ioSwitch('pgotAfbOXCFU', event.shiftKey)" id="igotAfbOXCFU" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="-" src="Mixed.png">
 </td>
 <td class=" content level1 subcell">1.1 final<br>
 </td>
 </tr></table></div></td></tr></table>
-<div id="pgotAfbOXCFU" class="expanded">
+<div id="pgotAfbOXCFU" class="collapsed">
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
